samples/_failures_safe/1761424097_e01641_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad1d22f4.c: In function ‘process_event’:
./samples/SAFE/__tmp_ad1d22f4.c:169:9: error: expected declaration or statement at end of input
  169 |         case STATE_READING:
      |         ^~~~
./samples/SAFE/__tmp_ad1d22f4.c:169:9: error: expected declaration or statement at end of input
